# ORADAZ

./: Cargo.toml  README.md  clippy.toml  config-oradaz.xml  schema.json  schema.xml
.cargo/: config.toml
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
src/: auth.rs  conditions.rs  config.rs  dumper.rs  errors.rs  lib.rs  logger.rs  main.rs  metadata.rs  mlakey.pub  prerequisites.rs  requests.rs  schema.rs  threading.rs  writer.rs
src/collect/: mod.rs
src/collect/auth/: mod.rs
src/collect/auth/flows/: authorization_code.rs  client_credentials.rs  device_code.rs  mod.rs
src/collect/auth/tokens/: entity.rs  manager.rs  mod.rs  response.rs  state.rs
src/collect/dump/: concurrency.rs  mod.rs  ratelimit.rs
src/collect/dump/conditions/: mod.rs  tenant.rs  user.rs  value.rs
src/collect/dump/orchestration/: coordinator.rs  dispatch.rs  dump.rs  events.rs  mod.rs  prereq_task.rs  process_errors.rs  sigint.rs
src/collect/dump/request/: executor.rs  mod.rs
src/collect/dump/request/thread/: handlers.rs  mod.rs
src/collect/dump/response/: batch.rs  error_thread.rs  mod.rs  status_handlers.rs  thread.rs
src/collect/dump/response/single/: mod.rs  value_handlers.rs
src/collect/prerequisites/: exchange.rs  jwt_claims.rs  mod.rs  models.rs  resources.rs
src/collect/prerequisites/graph/: app_permissions.rs  constants.rs  mod.rs  sp_roles.rs  user_roles.rs
src/inspect/: analysis.rs  hints.rs  loader.rs  log_parser.rs  mla_reader.rs  mod.rs
src/inspect/display/: compare.rs  coverage.rs  mod.rs  overview.rs  remediation.rs  sections.rs  stats.rs  summary.rs  table.rs  timeline.rs
src/keys/: key.mlapub
src/utils/: client.rs  config.rs  errors.rs  fatal_handling.rs  metadata.rs  mod.rs  mutex.rs  schema.rs  stats.rs  sysmem.rs
src/utils/logger/: backend.rs  config.rs  live_region.rs  mod.rs
src/utils/ui/: auth_banner.rs  collection_summary.rs  dump_event.rs  fatal.rs  mod.rs  prereq.rs  progress.rs  section.rs  step_live.rs  theme.rs  vt.rs
src/utils/url/: api.rs  api_call.rs  expected_errors.rs  mod.rs  relationship.rs  transform.rs  types.rs
src/utils/writer/: actor.rs  file.rs  mla.rs  mod.rs
tests/: collect_app_id.rs  collect_auth_client_credentials.rs  collect_auth_flows.rs  collect_auth_tokens.rs  collect_dump_arg.rs  collect_dump_concurrency.rs  collect_dump_conditions.rs  collect_dump_coordinator.rs  collect_dump_request.rs  collect_dump_response.rs  collect_dump_stress.rs  collect_prerequisites.rs  collect_recovery.rs  collect_relationship_chain.rs  common.rs  inspect_analysis.rs  inspect_compare.rs  inspect_config.rs  inspect_hints.rs  inspect_loader.rs  inspect_logs.rs  inspect_metadata.rs  inspect_services.rs  inspect_stats.rs  inspect_summary.rs  inspect_timeline.rs  integration_relationship_chain.rs  logger_network.rs  no_color.rs  pause_log.rs  ratelimit_fallback.rs  shuffle_option.rs  spinner_ascii.rs  utils_config.rs  utils_schema.rs  utils_stats.rs  utils_sysmem.rs  utils_ui_dump_event.rs  utils_url.rs  utils_url_expected_errors.rs  (+2 more)
tests/fixtures/: minimal-config.xml  schema-minimal.json  schema-multi.json  valid-config-extended.xml  valid-config-service-overrides.xml  valid-config.xml
tests/fixtures/schemas/: relationship_chain.json
