[package]
name = "oradaz"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
base64 = "0.13.0"
chrono = "0.4"
clap = "3.2.16"
curve25519-parser = "0.2.0" 
lazy_static = "1.4"
log = {version = "0.4", features = ["max_level_debug", "release_max_level_debug"]}
mla = "1.2.0"
rand = "0.8.5"
rayon = "1.5.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
serde_path_to_error = "0.1"
serde-xml-rs = "0.5.1"
